Now using Kelly's LinearRegression class, almost done with Cereal question.